<resources>
    <!-- Home activity -->
    <string name="app_name">MafScan</string>
    <string name="action_2">QR Info</string>
    <string name="scan">Scan</string>
    <string name="action_3">Failed/Saved</string>
    <string name="action_4">User Guide</string>
    <string name="maf_logo">maf_logo</string>
    <string name="scan_icon_desc">scan_img_view_desc</string>
    <string name="action_2_icon_desc">btn2_icon_desc</string>
    <string name="action_3_icon_desc">action_3_icon_desc</string>
    <string name="action_4_icon_desc">action_4_icon_desc</string>
    <string name="app">Navigation Drawer</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>

    <!-- Scan From/To activity -->
    <string name="online_tab_label">Online Mode</string>
    <string name="search_hint">Search Location</string>
    <string name="select_item">Select a location</string>
    <string name="offline_tab_label">Offline Mode</string>
    <string name="scan_0_from_hint">Scan Provenance </string>
    <string name="scan_0_to_hint">Scan Destination </string>
    <string name="clear_from_field">Clear from Scan location</string>
    <string name="clear_to_field">Clear To scan</string>
    <string name="scan_0_validate">Validate</string>
    <string name="scan_0_from_label">--- Select From location ---</string>
    <string name="scan_0_to_label">---- Select To location ----</string>
    <string name="offline_0_from_label">--- Scan From location ---</string>
    <string name="offline_0_to_label">---- Scan To location ----</string>
    <string name="scan_activity_label">Provenance → Destination</string>

    <!-- Update quantity dialog -->
    <string name="scan_qty_dialog_first">Scanned Data</string>
    <string name="scan_qty_dialog_second">Scanned Type</string>
    <string name="scan_qty_dialog_third">Scanned Date</string>
    <string name="scan_qty_dialog_hint">Enter Quantity</string>
    <string name="scan_qty_dialog_btn">Update Quantity</string>

    <!-- Scan Activity -->
    <string name="fab_cont_des">Floating Action Button (Clear Scans)</string>
    <string name="scan_hint_msg">Press the trigger to start scanning</string>
    <string name="sending_scans_to_server_dialog_msg">Sending scans to server ⏳</string>
    <string name="progress">progress</string>
    <string name="slash">/</string>
    <string name="progress_init">Progress: 0/ </string>

    <!-- Retrieve scan information -->
    <string name="scan_hint_message">Scan QR code to retrieve details</string>
    <string name="retrieve_scan_info_activity_title">Retrieve Scan Info</string>
    <string name="scanned_hint_message">"Scanned Code Information"</string>

    <!-- Authentication -->
    <string name="login">Authentication</string>
    <string name="login_label">Sign in</string>
    <string name="ldap_auth">Windows Auth.</string>
    <string name="scan_auth">Scan Auth.</string>
    <string name="hint_username_ldap_auth">Enter your Username</string>
    <string name="hint_password_ldap_password">Enter your Password</string>
    <string name="forgot_password">Need help?</string>
    <string name="authentication">Authentication</string>
    <string name="scan_result_placeholder">Scan result will be displayed here</string>
    <string name="clear_scan">Clear Scan</string>
    <string name="ldap_hint_msg">"Enter your Username/Password (Windows Credentials) "</string>

    <!-- About session -->
    <string name="about">About</string>
    <string name="app_description">A QR code scanning application that allows you to scan various types of
        QR codes, save them (resubmit or delete) and retrieve the information.
    </string>
    <string name="release_notes">Release Notes</string>
    <string name="release_info_21.02.25.V1.1">- Implemented offline "From/To" by scanning the locations.
    \n - Improved UI in retrieve scan information. \n - Added scan configuration (Enable/disable Triggers etc.).
    \n - Saving states in Retrieve scan Information. </string>
    <string name="release_info_06.03.25.V1.2">
        - Implemented Failed/Save scan session UI.
        \n- Added the About session UI.
        \n- Session are automatically / Manually saved.
        \n- Session can be resubmitted or deleted.
        \n- Improved overall application UI.
        \n- Fixed bugs in sending scans (Application crash).
    </string>
    <string name="release_info_17.03.25.V1.3">
        - Resend Scans to SQL Server: Improved handling of scan resubmission with UI updates and progress tracking.
        \n- Session Management: Automatic/manual saving, resubmission, and deletion of scan sessions.
        \n- Enhanced UI and UX: Added a searchable dropdown, improved dialogs, and better error handling.
        \n- Improved Messaging: Unified success messages, refined toast notifications, and added failure alerts.
        \n- Bug Fixes and Stability: Fixed crashes, optimized scan data updates, and enhanced logging.
        \n- User Guide and Help: Added a barcode scanning guide and a help dialog with images.
        \n- Navigation: Added menu items to navigate between activities.
    </string>
    <string name="release_info_25.03.25.V1.4">
    - Resend Scans to SQL Server: Improved scan resubmission handling with UI updates and progress tracking.
    \n- Session Management: Added session types (Reception, Transfer, Expedition, Inventory, Empty Shuttle).
    \n- Enhanced UI and UX: Introduced a dynamic home screen with card-based navigation.
    \n- Improved Messaging: Enhanced error handling, unified success messages, refined toast notifications, and added failure alerts.
    \n- Bug Fixes and Stability: Fixed UI-related crashes, optimized SQL queries, improved app bar title updates, and refined scan state management.
    \n- Navigation: Added menu items to navigate between activities, updated app bar titles dynamically based on session type.
</string>
    <string name="release_info_26.03.25.V1.4.1">
    - Minor fix : Updated global date formating in this current version 1.4.1 .
    \n** Version 1.4.0 (Previous release) release info :
    \n- Resend Scans to SQL Server: Improved scan resubmission handling with UI updates and progress tracking.
    \n- Session Management: Added session types (Reception, Transfer, Expedition, Inventory, Empty Shuttle).
    \n- Enhanced UI and UX: Introduced a dynamic home screen with card-based navigation.
    \n- Improved Messaging: Enhanced error handling, unified success messages, refined toast notifications, and added failure alerts.
    \n- Bug Fixes and Stability: Fixed UI-related crashes, optimized SQL queries, improved app bar title updates, and refined scan state management.
    \n- Navigation: Added menu items to navigate between activities, updated app bar titles dynamically based on session type.
</string>
    <string name="key_features">Key Feature</string>
    <string name="scan_qr_codes"> - Scan, send and retrieve QR codes information.</string>
    <string name="view_scan_history"> - Implements an online and offline mode.</string>
    <string name="help_and_support">Help and Support</string>
    <string name="contact_us">Contact us at informatique@maf-france.com</string>
    <string name="legal">Legal</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="copyright">Ⓒ F.KOUASSI/MAF RODA AGROBOTIC</string>
    <string name="app_icon">scan icon description</string>

    <!-- Failed / save scans -->
    <string name="failed_saved_scans">"Failed/Saved Scans "</string>
    <string name="no_failed_saved_scans">No failed or saved scans found</string>
    <string name="resend">Resend</string>
    <string name="delete">Delete</string>
    <string name="expand_collapse_button">expand collapse button</string>
    <string name="scan_count">%d scan(s)</string>
    <string name="scan_resubmitted_success_msg">"%d scan(s) sent successfully!"</string>
    <string name="session_from_to_code">%s ⇄ %s</string>
    <string name="arrow_up_w_label">↑ %s</string>
    <string name="arrow_down_w_label">↓ %s</string>
    <string name="send_session_desc">"Send Scan Session "</string>
    <string name="send_session">Send</string>
    <string name="save_session_desc">Save session</string>
    <string name="save_session">Save</string>
    <string name="clear_session_desc">"Clear Scans description "</string>
    <string name="clear_session">Clear</string>
    <string name="qr_code_scanner_content_description">QR code scanner</string>
    <string name="inventory_icon">📋</string>
    <string name="transfer_icon">🔄</string>
    <string name="reception_icon">📥</string>
    <string name="expedition_icon">📤</string>

    <!-- Item scan record -->
    <string name="scan_status_sent">Sent</string>
    <string name="scan_status_not_sent">Not sent</string>

    <!-- Technical Guide -->
    <string name="user_guide">User Guide</string>
    <string name="user_guide_content">User Guide Content</string>
    <string name="scan_code_table_label_1">Prefix</string>
    <string name="scan_code_table_label_2">Data Field</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="help_image_description">scan code help image description</string>
    <string name="new_scan_session">New scan session</string>

    <!-- Home button title -->
    <string name="card_1">Retail Activities</string>
    <string name="transfer">Transfer</string>
    <string name="expedition">Expedition</string>
    <string name="reception">Reception</string>
    <string name="shuttle">Shuttle</string>
    <string name="inventory">Inventory</string>
    <string name="card_2">Utils</string>
    <string name="retail_activities">Retail Activities</string>
    <string name="failed_or_saved_scans">Failed/Saved</string>
    <string name="qr_info">QR Info</string>

    <string name="action_about">About MafScan</string>
    <string name="home">Home</string>
    <string name="card_icon_desc">card icon description</string>

    <!-- Scan Reception/Expedition/Inventory/Shuttle -->
    <string name="reception_tab_code">REC</string>
    <string name="expedition_tab_code">EXP</string>
    <string name="inventory_tab_code">INV</string>
    <string name="shuttle_tab_code">CLR</string>
    <string name="reception_expedition_activity_title">Reception/Expedition</string>
    <string name="selectedTab">selectedTab</string>
    <string name="scan_label">Scan…</string>
    <string name="reception_activity_title">Reception</string>
    <string name="expedition_activity_title">Expedition</string>
    <string name="inventory_activity_title">Inventory</string>
    <string name="empty_shuttle_activity_title">Empty Shuttle</string>

</resources>