<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/action_settings"/>
        <!--        <item-->
        <!--            android:id="@+id/nav_share"-->
        <!--            android:icon="@drawable/nav_share"-->
        <!--            android:title="Share"/>-->
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/info"
            android:title="@string/action_about"/>
    </group>
    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/baseline_login_24"
                android:title="@string/login_label"/>
        </menu>
    </item>

</menu>