<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray">

    <!-- AppBar -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_color">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/black"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/app_name"
            app:logo="@drawable/baseline_home_24"
            app:titleTextColor="@color/white"
            app:contentInsetStart="0dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Content Area -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- App Logo -->
        <ImageView
            android:id="@+id/appLogo"
            android:layout_width="267dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/maf_logo"
            android:src="@drawable/maf_logo" />

        <!-- Buttons -->
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:columnCount="2"
            android:padding="16dp">

            <!-- Scan Button -->
            <LinearLayout
                android:id="@+id/btn_scan"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/button_background_riple"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_scan"
                    android:contentDescription="@string/scan_icon_desc" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scan"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:layout_gravity="center" />
            </LinearLayout>

            <!-- Action Button 2 -->
            <LinearLayout
                android:id="@+id/btn_action2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/button_background_riple"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_baseline_menu_24_xml"
                    android:contentDescription="@string/action_2_icon_desc" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_2"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:layout_gravity="center" />
            </LinearLayout>

            <!-- Action Button 3 -->
            <LinearLayout
                android:id="@+id/btn_action3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/button_background_riple"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_baseline_menu_24_xml"
                    android:contentDescription="@string/action_3_icon_desc" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_3"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:layout_gravity="center" />
            </LinearLayout>

            <!-- Action Button 4 -->
            <LinearLayout
                android:id="@+id/btn_action4"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/button_background_riple"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_baseline_menu_24_xml"
                    android:contentDescription="@string/action_4_icon_desc" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_4"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:layout_gravity="center" />
            </LinearLayout>

        </GridLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>